welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:2: error: ';' expected but ')' found.
if (  you>=3) & (date>=8 )){
                          ^