welcome.lessons.welcome.bat.bool2.DateFashion.scala.code
def dateFashion(you:Int, date:Int):Int = {
if (  you>=3) & (date>=8 )){
	return 2
}
if (  date>=3) & (you>=8 )){
	return 2
}
if ( you<=2 || date<=2){ 
	return 0
}
else return 1
}